[gd_scene load_steps=2 format=3 uid="uid://cpr2s8bhc35jo"]

[ext_resource type="Script" uid="uid://cq7sc5cnrumkw" path="res://scripts/Leaderboard.gd" id="1"]

[node name="Leaderboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "LEADERBOARD"
horizontal_alignment = 1

[node name="TopBar" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BackButton" type="Button" parent="Panel/VBox/TopBar"]
layout_mode = 2
text = "‚Üê Back"

[node name="FilterOption" type="OptionButton" parent="Panel/VBox/TopBar"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="SortOption" type="OptionButton" parent="Panel/VBox/TopBar"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="ClearButton" type="Button" parent="Panel/VBox/TopBar"]
layout_mode = 2
text = "Clear All"

[node name="StatsPanel" type="PanelContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Grid" type="GridContainer" parent="Panel/VBox/StatsPanel"]
layout_mode = 2
columns = 2

[node name="TotalPlaysLabel" type="Label" parent="Panel/VBox/StatsPanel/Grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Total Plays: 0"

[node name="AverageAccuracyLabel" type="Label" parent="Panel/VBox/StatsPanel/Grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Average Accuracy: 0%"

[node name="HighestScoreLabel" type="Label" parent="Panel/VBox/StatsPanel/Grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Highest Score: --"

[node name="FavoriteSongLabel" type="Label" parent="Panel/VBox/StatsPanel/Grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Favorite Song: --"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeaderboardList" type="VBoxContainer" parent="Panel/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5
